mlflow_deployment/dev/generated/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service-dev
  namespace: smart-dc-dev
  labels:
    app: mlflow
    environment: dev
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mlflow
    environment: dev
